(refactor) remove item builders, switch to paper 1.19.4